# PyTch_light_HYDRA

./: .gitignore  =2.0.2  dvc.yaml  new_images.dvc  pyproject.toml
.dvc/: config
configs/: train.yaml
configs/callbacks/: default.yaml  early_stoping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/data/: dogimage.yaml
configs/experiment/: catdogimage.ex.yaml  dogimage.ex.yaml
configs/model/: dog_classifier.yaml
configs/trainer/: default.yaml
lightning_logs/version_0/: events.out.tfevents.1729426284.tiwarypraty-pytchlighth-5da35n3hymj.22451.0
lightning_logs/version_1/: events.out.tfevents.1729426764.tiwarypraty-pytchlighth-5da35n3hymj.24494.0
lightning_logs/version_2/: events.out.tfevents.1729426800.tiwarypraty-pytchlighth-5da35n3hymj.24867.0
lightning_logs/version_3/: events.out.tfevents.1729429940.tiwarypraty-pytchlighth-5da35n3hymj.6104.0
logs/dog_breed_classification/version_0/: events.out.tfevents.1727506112.0ad518a11bc3.1.0  events.out.tfevents.1727506597.0ad518a11bc3.1.1  hparams.yaml
logs/dog_breed_classification/version_1/: events.out.tfevents.1727510076.2a255336d21e.1.0
logs/dog_breed_classification/version_10/: events.out.tfevents.1727543524.2828af372a79.1.0
logs/dog_breed_classification/version_11/: events.out.tfevents.1727543733.23c679bd077a.1.0  hparams.yaml
logs/dog_breed_classification/version_16/: hparams.yaml  (+1 more)
src/: data.dvc  eval.py  infer.py  train.py
src/datamodules/: catdogimage_datamodule.py  dogimage_datamodule.py
src/models/: catdog_classifier.py  dog_classifier.py
(+14 files in other folders)
