[project]
name = "lightning-template-hydra"
version = "0.1.0"
description = "Pratyush Project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "black==24.8.0",
    "lightning[extra]==2.4.0",
    "pytest==8.3.3",
    "rich==13.8.1",
    "tensorboard==2.17.1",
    "timm==1.0.9",
    "torch==2.4.1+cpu",
    "torchvision==0.19.1+cpu",
    "kaggle==1.5.12",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "rootutils>=1.0.7",
    "dvc>=3.55.2",
]
